package at.reder.railcom.data.model;

/**
 *
 * @author alex
 */
public interface Entity {

    public String getName();

    public void setName(String name);

    public String getDescription();

    public void setDescription(String description);
}
