package at.reder.railcom.data.model;

/**
 *
 * @author alex
 */
public interface ModelEntity extends Entity {

    public Scale getScale();

    public void setScale(Scale scale);
}
