package at.reder.railcom.data.model;

/**
 *
 * @author alex
 */
public enum Scale {

    Z, N, HO, O, I;

}
